syntax/y.output

state 0
	$accept: .start $end 

	tokStartModule  shift 2
	tokStartDecls  shift 3
	tokStartExpr  shift 4
	tokStartType  shift 5
	.  error

	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  tokStartModule.module tokEOF 
	keyspace: .    (147)

	tokKeyspace  shift 8
	.  reduce 147 (src line 647)

	keyspace  goto 7
	module  goto 6

state 3
	start:  tokStartDecls.defs tokEOF 
	defs: .    (42)

	.  reduce 42 (src line 314)

	defs  goto 9

state 4
	start:  tokStartExpr.expr tokEOF 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 10
	term  goto 11
	exprblock  goto 25

state 5
	start:  tokStartType.type tokEOF 

	tokIdent  shift 50
	tokInt  shift 38
	tokString  shift 40
	tokBool  shift 41
	tokFloat  shift 39
	tokFile  shift 42
	tokDir  shift 43
	tokModule  shift 47
	tokFunc  shift 49
	'{'  shift 46
	'('  shift 48
	'['  shift 45
	.  error

	identSelector  goto 44
	type  goto 37

state 6
	start:  tokStartModule module.tokEOF 

	tokEOF  shift 51
	.  error


state 7
	module:  keyspace.params defs 
	params: .    (149)

	.  reduce 149 (src line 652)

	params  goto 52

state 8
	keyspace:  tokKeyspace.tokExpr 

	tokExpr  shift 53
	.  error


state 9
	start:  tokStartDecls defs.tokEOF 
	defs:  defs.def ';' 

	tokIdent  shift 60
	tokAt  shift 58
	tokVal  shift 59
	tokFunc  shift 61
	tokType  shift 62
	tokEOF  shift 54
	.  error

	valdef  goto 56
	typedef  goto 57
	def  goto 55

state 10
	start:  tokStartExpr expr.tokEOF 
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLE expr 
	expr:  expr.tokGE expr 
	expr:  expr.tokNE expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.tokLSH expr 
	expr:  expr.tokRSH expr 
	expr:  expr.tokSquiggleArrow expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'(' applyargs commaOk ')' 
	expr:  expr.'.' tokIdent 

	'('  shift 82
	'['  shift 81
	tokOrOr  shift 64
	tokAndAnd  shift 65
	tokLE  shift 68
	tokGE  shift 69
	tokNE  shift 70
	tokEqEq  shift 71
	tokLSH  shift 78
	tokRSH  shift 79
	tokSquiggleArrow  shift 80
	'<'  shift 66
	'>'  shift 67
	'+'  shift 72
	'-'  shift 73
	'*'  shift 74
	'/'  shift 75
	'%'  shift 76
	'&'  shift 77
	tokEOF  shift 63
	'.'  shift 83
	.  error


state 11
	expr:  term.    (68)

	.  reduce 68 (src line 443)


state 12
	expr:  tokIf.expr ifelseblock tokElse ifelseblock 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 84
	term  goto 11
	exprblock  goto 25

state 13
	expr:  '!'.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 85
	term  goto 11
	exprblock  goto 25

state 14
	expr:  '-'.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 86
	term  goto 11
	exprblock  goto 25

state 15
	term:  tokExpr.    (92)

	.  reduce 92 (src line 491)


state 16
	term:  tokIdent.    (93)

	.  reduce 93 (src line 493)


state 17
	term:  tokFile.    (94)

	.  reduce 94 (src line 495)


state 18
	term:  tokDir.    (95)

	.  reduce 95 (src line 497)


state 19
	term:  tokFunc.'(' funcargs ')' tokArrow expr 
	term:  tokFunc.'(' funcargs ')' type tokArrow expr 

	'('  shift 87
	.  error


state 20
	term:  tokExec.'(' commadefs ')' type tokTemplate 

	'('  shift 88
	.  error


state 21
	term:  tokMake.'(' tokExpr ')' 
	term:  tokMake.'(' tokExpr ',' commadefs commaOk ')' 

	'('  shift 89
	.  error


state 22
	term:  '('.expr ',' tupleargs commaOk ')' 
	term:  '('.expr ')' 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 90
	term  goto 11
	exprblock  goto 25

state 23
	term:  '{'.structfieldargs commaOk '}' 
	exprblock:  '{'.defs1 expr maybeColon '}' 

	tokIdent  shift 95
	tokAt  shift 58
	tokVal  shift 59
	tokFunc  shift 61
	tokType  shift 62
	.  error

	defs1  goto 92
	valdef  goto 56
	typedef  goto 57
	def  goto 94
	structfieldarg  goto 93
	structfieldargs  goto 91

state 24
	term:  '['.listargs commaOk ']' 
	term:  '['.listargs commaOk listappendargs commaOk ']' 
	term:  '['.':' ']' 
	term:  '['.mapargs commaOk ']' 
	term:  '['.mapargs commaOk listappendargs commaOk ']' 
	term:  '['.expr '|' comprclauses ']' 
	listargs: .    (134)

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	':'  shift 97
	.  reduce 134 (src line 605)

	expr  goto 99
	term  goto 11
	exprblock  goto 25
	listargs  goto 96
	mapargs  goto 98

state 25
	term:  exprblock.    (110)

	.  reduce 110 (src line 546)


state 26
	term:  tokLen.'(' expr ')' 

	'('  shift 100
	.  error


state 27
	term:  tokInt.'(' expr ')' 

	'('  shift 101
	.  error


state 28
	term:  tokFloat.'(' expr ')' 

	'('  shift 102
	.  error


state 29
	term:  tokZip.'(' expr ',' expr ')' 

	'('  shift 103
	.  error


state 30
	term:  tokUnzip.'(' expr ')' 

	'('  shift 104
	.  error


state 31
	term:  tokFlatten.'(' expr ')' 

	'('  shift 105
	.  error


state 32
	term:  tokMap.'(' expr ')' 

	'('  shift 106
	.  error


state 33
	term:  tokList.'(' expr ')' 

	'('  shift 107
	.  error


state 34
	term:  tokDelay.'(' expr ')' 

	'('  shift 108
	.  error


state 35
	term:  tokPanic.'(' expr ')' 

	'('  shift 109
	.  error


state 36
	term:  tokTrace.'(' expr ')' 

	'('  shift 110
	.  error


state 37
	start:  tokStartType type.tokEOF 

	tokEOF  shift 111
	.  error


state 38
	type:  tokInt.    (7)

	.  reduce 7 (src line 156)


state 39
	type:  tokFloat.    (8)

	.  reduce 8 (src line 158)


state 40
	type:  tokString.    (9)

	.  reduce 9 (src line 159)


state 41
	type:  tokBool.    (10)

	.  reduce 10 (src line 160)


state 42
	type:  tokFile.    (11)

	.  reduce 11 (src line 161)


state 43
	type:  tokDir.    (12)

	.  reduce 12 (src line 162)


state 44
	identSelector:  identSelector.'.' tokIdent 
	type:  identSelector.    (13)

	'.'  shift 112
	.  reduce 13 (src line 163)


state 45
	type:  '['.type ']' 
	type:  '['.type ':' type ']' 

	tokIdent  shift 50
	tokInt  shift 38
	tokString  shift 40
	tokBool  shift 41
	tokFloat  shift 39
	tokFile  shift 42
	tokDir  shift 43
	tokModule  shift 47
	tokFunc  shift 49
	'{'  shift 46
	'('  shift 48
	'['  shift 45
	.  error

	identSelector  goto 44
	type  goto 113

state 46
	type:  '{'.typefields '}' 

	tokIdent  shift 117
	.  error

	typefields  goto 114
	typefield  goto 115
	typefieldidents  goto 116

state 47
	type:  tokModule.'{' typefields '}' 

	'{'  shift 118
	.  error


state 48
	type:  '('.typeargs ')' 

	tokIdent  shift 50
	tokInt  shift 38
	tokString  shift 40
	tokBool  shift 41
	tokFloat  shift 39
	tokFile  shift 42
	tokDir  shift 43
	tokModule  shift 47
	tokFunc  shift 49
	'{'  shift 46
	'('  shift 48
	'['  shift 45
	.  error

	identSelector  goto 44
	type  goto 122
	typearg  goto 121
	typearglist  goto 120
	typeargs  goto 119

state 49
	type:  tokFunc.'(' typeargs ')' type 

	'('  shift 123
	.  error


state 50
	identSelector:  tokIdent.    (5)

	.  reduce 5 (src line 150)


state 51
	start:  tokStartModule module tokEOF.    (1)

	.  reduce 1 (src line 124)


state 52
	module:  keyspace params.defs 
	params:  params.param ';' 
	defs: .    (42)
	param: .    (151)

	tokParam  shift 126
	';'  reduce 151 (src line 657)
	.  reduce 42 (src line 314)

	defs  goto 124
	param  goto 125

state 53
	keyspace:  tokKeyspace tokExpr.    (148)

	.  reduce 148 (src line 649)


state 54
	start:  tokStartDecls defs tokEOF.    (2)

	.  reduce 2 (src line 130)


state 55
	defs:  defs def.';' 

	';'  shift 127
	.  error


state 56
	def:  valdef.    (53)

	.  reduce 53 (src line 349)


state 57
	def:  typedef.    (54)

	.  reduce 54 (src line 349)


state 58
	valdef:  tokAt.tokRequires '(' commadefs ')' semiOk valdef 

	tokRequires  shift 128
	.  error


state 59
	valdef:  tokVal.val 

	tokIdent  shift 131
	'{'  shift 135
	'('  shift 133
	'['  shift 134
	'_'  shift 132
	.  error

	val  goto 129
	pat  goto 130

state 60
	valdef:  tokIdent.tokAssign expr 

	tokAssign  shift 136
	.  error


state 61
	valdef:  tokFunc.tokIdent '(' funcargs ')' '=' expr 
	valdef:  tokFunc.tokIdent '(' funcargs ')' type '=' expr 

	tokIdent  shift 137
	.  error


state 62
	typedef:  tokType.tokIdent type 

	tokIdent  shift 138
	.  error


state 63
	start:  tokStartExpr expr tokEOF.    (3)

	.  reduce 3 (src line 135)


state 64
	expr:  expr tokOrOr.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 139
	term  goto 11
	exprblock  goto 25

state 65
	expr:  expr tokAndAnd.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 140
	term  goto 11
	exprblock  goto 25

state 66
	expr:  expr '<'.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 141
	term  goto 11
	exprblock  goto 25

state 67
	expr:  expr '>'.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 142
	term  goto 11
	exprblock  goto 25

state 68
	expr:  expr tokLE.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 143
	term  goto 11
	exprblock  goto 25

state 69
	expr:  expr tokGE.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 144
	term  goto 11
	exprblock  goto 25

state 70
	expr:  expr tokNE.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 145
	term  goto 11
	exprblock  goto 25

state 71
	expr:  expr tokEqEq.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 146
	term  goto 11
	exprblock  goto 25

state 72
	expr:  expr '+'.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 147
	term  goto 11
	exprblock  goto 25

state 73
	expr:  expr '-'.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 148
	term  goto 11
	exprblock  goto 25

state 74
	expr:  expr '*'.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 149
	term  goto 11
	exprblock  goto 25

state 75
	expr:  expr '/'.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 150
	term  goto 11
	exprblock  goto 25

state 76
	expr:  expr '%'.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 151
	term  goto 11
	exprblock  goto 25

state 77
	expr:  expr '&'.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 152
	term  goto 11
	exprblock  goto 25

state 78
	expr:  expr tokLSH.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 153
	term  goto 11
	exprblock  goto 25

state 79
	expr:  expr tokRSH.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 154
	term  goto 11
	exprblock  goto 25

state 80
	expr:  expr tokSquiggleArrow.expr 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 155
	term  goto 11
	exprblock  goto 25

state 81
	expr:  expr '['.expr ']' 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 156
	term  goto 11
	exprblock  goto 25

state 82
	expr:  expr '('.applyargs commaOk ')' 

	tokIdent  shift 16
	tokExpr  shift 15
	tokInt  shift 27
	tokFloat  shift 28
	tokFile  shift 17
	tokDir  shift 18
	tokExec  shift 20
	tokFunc  shift 19
	tokIf  shift 12
	tokMake  shift 21
	tokLen  shift 26
	tokPanic  shift 35
	tokDelay  shift 34
	tokTrace  shift 36
	tokMap  shift 32
	tokList  shift 33
	tokZip  shift 29
	tokUnzip  shift 30
	tokFlatten  shift 31
	'{'  shift 23
	'('  shift 22
	'['  shift 24
	'-'  shift 14
	'!'  shift 13
	.  error

	expr  goto 158
	term  goto 11
	exprblock  goto 25
	applyargs  goto 157

state 83
	expr:  expr '.'.tokIdent 

	tokIdent  shift 159
	.  error


state 84
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLE expr 
	expr:  expr.tokGE expr 
	expr:  expr.tokNE expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.tokLSH expr 
	expr:  expr.tokRSH expr 
	expr:  expr.tokSquiggleArrow expr 
	expr:  tokIf expr.ifelseblock tokElse ifelseblock 
	expr:  expr.'[' expr ']' 
	expr:  expr.'(' applyargs commaOk ')' 
	expr:  expr.'.' tokIdent 

	'{'  shift 161
	'('  shift 82
	'['  shift 81
	tokOrOr  shift 64
	tokAndAnd  shift 65
	tokLE  shift 68
	tokGE  shift 69
	tokNE  shift 70
	tokEqEq  shift 71
	tokLSH  shift 78
	tokRSH  shift 79
	tokSquiggleArrow  shift 80
	'<'  shift 66
	'>'  shift 67
	'+'  shift 72
	'-'  shift 73
	'*'  shift 74
	'/'  shift 75
	'%'  shift 76
	'&'  shift 77
	'.'  shift 83
	.  error

	ifelseblock  goto 160

state 85
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLE expr 
	expr:  expr.tokGE expr 
	expr:  expr.tokNE expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.tokLSH expr 
	expr:  expr.tokRSH expr 
	expr:  expr.tokSquiggleArrow expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'(' applyargs commaOk ')' 
	expr:  expr.'.' tokIdent 
	expr:  '!' expr.    (90)

	'('  shift 82
	'['  shift 81
	'.'  shift 83
	.  reduce 90 (src line 486)


state 86
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLE expr 
	expr:  expr.tokGE expr 
	expr:  expr.tokNE expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.tokLSH expr 
	expr:  expr.tokRSH expr 
	expr:  expr.tokSquiggleArrow expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'(' applyargs commaOk ')' 
	expr:  expr.'.' tokIdent 
	expr:  '-' expr.    (91)

	'('  shift 82
	'['  shift 81
	'.'  shift 83
	.  reduce 91 (src line 488)


state 87
	term:  tokFunc '('.funcargs ')' tokArrow expr 
	term:  tokFunc '('.funcargs ')' type tokArrow expr 

	tokIdent  shift 117
	.  error

	typefields  goto 163
	typefield  goto 115
	funcargs  goto 162
	typefieldidents  goto 116

state 88
	term:  tokExec '('.commadefs ')' type tokTemplate 
	commadefs: .    (46)

	tokIdent  shift 167
	tokAt  shift 58
	tokVal  shift 59
	tokFunc  shift 61
	tokType  shift 62
	.  reduce 46 (src line 325)

	commadefs  goto 164
	valdef  goto 56
	typedef  goto 57
	def  goto 166
	commadef  goto 165

state 89
	term:  tokMake '('.tokExpr ')' 
	term:  tokMake '('.tokExpr ',' commadefs commaOk ')' 

	tokExpr  shift 168
	.  error


state 90
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLE expr 
	expr:  expr.tokGE expr 
	expr:  expr.tokNE expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.tokLSH expr 
	expr:  expr.tokRSH expr 
	expr:  expr.tokSquiggleArrow expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'(' applyargs commaOk ')' 
	expr:  expr.'.' tokIdent 
	term:  '(' expr.',' tupleargs commaOk ')' 
	term:  '(' expr.')' 
